log
Fri 10 Mar 2023 12:08:25 PM UTC: 
 exercises.c | 17 +++++++++++++----
 1 file changed, 13 insertions(+), 4 deletions(-)
 tests:  3|4
total_score: 30/70
9acb3a8
Fri 10 Mar 2023 12:15:44 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
9c60432
Fri 10 Mar 2023 12:18:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:76:11: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   76 |    return *vector;
      |           ^~~~~~~
exercises.c:77:1: error: control reaches end of non-void function [-Werror=return-type]
   77 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
351d76d
Fri 10 Mar 2023 12:18:11 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
aed26fd
Fri 10 Mar 2023 12:18:50 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
36423ac
Fri 10 Mar 2023 12:19:31 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
fb99b23
Fri 10 Mar 2023 12:21:09 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
8c7a994
Fri 10 Mar 2023 12:23:34 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:76:15: error: ‘var’ is used uninitialized [-Werror=uninitialized]
   76 |    var->datos = calloc(n,sizeof(int));
      |    ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f23a169
Fri 10 Mar 2023 12:23:48 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘crearVector’:
exercises.c:76:15: error: ‘var’ is used uninitialized [-Werror=uninitialized]
   76 |    var->datos = (int *) calloc(n,sizeof(int));
      |    ~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
257d05b
Fri 10 Mar 2023 12:25:03 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
359fc3c
Fri 10 Mar 2023 05:24:28 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
d43d56c
Fri 10 Mar 2023 05:37:32 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:86:10: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   86 |   v[i] = valor;
      |          ^~~~~
Compilation failed
f46b509
Fri 10 Mar 2023 05:40:47 PM UTC: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:75:16: error: invalid initializer
   75 |   Vector vec = calloc(n, sizeof(Vector));
      |                ^~~~~~
exercises.c:78:11: error: subscripted value is neither array nor pointer nor vector
   78 |        vec[k]->datos = (vec[k]->capacidad,sizeof(int));
      |           ^
exercises.c:78:28: error: subscripted value is neither array nor pointer nor vector
   78 |        vec[k]->datos = (vec[k]->capacidad,sizeof(int));
      |                            ^
exercises.c:78:42: error: left-hand operand of comma expression has no effect [-Werror=unused-value]
   78 |        vec[k]->datos = (vec[k]->capacidad,sizeof(int));
      |                                          ^
exercises.c:80:10: error: incompatible types when returning type ‘Vector’ but ‘Vector *’ was expected
   80 |   return vec;
      |          ^~~
exercises.c: In function ‘asignarValor’:
exercises.c:89:10: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   89 |   v[i] = valor;
      |          ^~~~~
exercises.c: In function ‘crearVector’:
exercises.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2191c45
